# canchavision

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: default.yaml  football_roboflow.yaml  football_siglip.yaml  futsal.yaml
notebooks/: canchavision_colab.ipynb
scripts/: compute_possession.py  compute_stats.py  diagnose_teams.py  download_sample.py  radar_demo.py
src/canchavision/: __init__.py  annotate.py  cli.py  config.py  detect.py  heatmap.py  merge.py  pipeline.py  pitch.py  possession.py  radar.py  stats.py  team_embeddings.py  teams.py  track.py
