[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "canchavision"
version = "0.1.0"
description = "Video-based player tracking and stats for football 11 and futsal."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ultralytics>=8.2.0",
    "supervision>=0.21.0,<0.30",  # ByteTrack deprecado en 0.30; fijado por ahora
    "opencv-python>=4.8.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "pyyaml>=6.0",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = ["yt-dlp>=2024.1.0"]

[project.scripts]
canchavision = "canchavision.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
